# variational-surface-cutting

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/: combining_hash_functions.h  curve.h  curve.ipp  dense_matrix.h  dense_matrix.ipp  detect_symmetry.h  direction_fields.h  discrete_operators.h  disjoint_sets.h  fast_marching_method.h  geometry.h  geometry.ipp  halfedge_data_macros.h  halfedge_data_types.h  halfedge_data_types.ipp  halfedge_dual_data_types.h  halfedge_dual_data_types.ipp  halfedge_dual_iterators.h  halfedge_dual_iterators.ipp  halfedge_dual_pointer_types.h  halfedge_dual_pointer_types.ipp  halfedge_iterators.h  halfedge_iterators.ipp  halfedge_mesh.h  halfedge_mesh.ipp  halfedge_pointer_types.h  halfedge_pointer_types.ipp  linear_algebra_utilities.h  linear_algebra_utilities.ipp  meshio.h  polygon_soup_mesh.h  quaternion.h  solvers.h  sparse_matrix.h  spline_surface.h  spline_surface.ipp  timing.h  unit_vector3.h  utilities.h  vector2.h  (+3 more)
core/include/eigen_wrapper/: LDLFactorization.h  LDLFactorization.ipp  LLFactorization.h  LLFactorization.ipp  LUFactorization.h  LUFactorization.ipp  QRFactorization.h  QRFactorization.ipp  sparse_factorization.h  sparse_factorization.ipp  sparse_matrix_eigen.ipp  sparse_solvers_eigen.ipp
core/include/suitesparse_wrapper/: LDLFactorization.h  LDLFactorization.ipp  LLFactorization.h  LLFactorization.ipp  LUFactorization.h  LUFactorization.ipp  QRFactorization.h  QRFactorization.ipp  linear_context.h  sparse_factorization.h  sparse_factorization.ipp  sparse_matrix_suitesparse.ipp  sparse_solvers_suitesparse.ipp
core/src/: curve.cpp  dense_matrix.cpp  detect_symmetry.cpp  direction_fields.cpp  discrete_operators.cpp  disjoint_sets.cpp  fast_marching_method.cpp  geometry.cpp  halfedge_dual_iterators.cpp  halfedge_dual_pointer_types.cpp  halfedge_iterators.cpp  halfedge_mesh.cpp  halfedge_pointer_types.cpp  linear_algebra_utilities.cpp  linear_context.cpp  meshio.cpp  polygon_soup_mesh.cpp  quaternion.cpp  solvers.cpp  sparse_matrix.cpp  spline_surface.cpp  unit_vector3.cpp  utilities.cpp  vector2.cpp  vector3.cpp
gui/: CMakeLists.txt
gui/include/: camera.h  colormaps.h  colors.h  gl_utils.h  gui.h  image.h  project_gui.h  scene_lines.h  scene_mesh.h  scene_object.h  scene_plane.h  scene_points.h  scene_vectors.h  shaders.h  viewer.h
gui/include/shaders/: checker_shaders.h  dim_shader.h  dual_shaders.h  light_shaders.h  line_shaders.h  phong_shaders.h  shadow_shaders.h  shiny_shaders.h  simple_shaders.h  wire_shaders.h
gui/src/: CMakeLists.txt  camera.cpp  colormaps.cpp  gui.cpp  image.cpp  main.cpp  project_gui.cpp  scene_lines.cpp  scene_mesh.cpp  scene_object.cpp  scene_plane.cpp  scene_points.cpp  scene_vectors.cpp  viewer.cpp
projects/: CMakeLists.txt
projects/cuts/: CMakeLists.txt
projects/cuts/core/: CMakeLists.txt
projects/cuts/core/include/: compute_visibility.h  d_charts.h  developable_approximation.h  eulerian_shape_optimizer.h  fast_cholesky.h  fast_triangle_soup.h  generate_geometry.h  local_feature_size.h  mesh_ray_tracer.h  mesh_union_split.h  mutable_triangle_cut_mesh.h  read_scalar_function_from_texcoord.h  region_management.h  relaxed_cut_optimizer.h  sdf_initialization.h  surface_line.h  surface_patch.h  target_edge_lengths.h
projects/cuts/core/src/: compute_visibility.cpp  d_charts.cpp  developable_approximation.cpp  eulerian_shape_optimizer.cpp  fast_cholesky.cpp  fast_triangle_soup.cpp  generate_geometry.cpp  local_feature_size.cpp  mesh_ray_tracer.cpp  mesh_union_split.cpp  mutable_triangle_cut_mesh.cpp  read_scalar_function_from_texcoord.cpp  region_management.cpp  relaxed_cut_optimizer.cpp  sdf_initialization.cpp  surface_line.cpp  surface_patch.cpp  target_edge_lengths.cpp
projects/cuts/gui/: CMakeLists.txt
projects/cuts/gui/include/: cut_shaders.h  cuts_gui.h  scene_mesh_cuts.h
projects/cuts/gui/src/: cuts_gui.cpp  scene_mesh_cuts.cpp
projects/flatten/: CMakeLists.txt
projects/flatten/core/: CMakeLists.txt
projects/flatten/core/include/: bff.h  boundary_constraints.h  distortion.h  flatten_utils.h  mesh_cutter.h  parameterization.h  subdivision.h
projects/flatten/core/src/: bff.cpp  boundary_constraints.cpp  distortion.cpp  flatten_utils.cpp  mesh_cutter.cpp  parameterization.cpp  subdivision.cpp
